--- a/test/fixtures/sites.yml
+++ b/test/fixtures/sites.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  name: MyString
+nentir_vale:
+  name: Nentir Vale
 
-two:
-  name: MyString
+nentir_vale_online:
+  name: Nentir Vale Online
