--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,9 +1,21 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  nickname: MyString
-  text: MyText
+clay:
+  nickname: cchan
+  text: I am so great
+  page: nv_session_1
+  created_at: 2008/07/02
+  
+kisu:
+  nickname: kkang
+  text: I disagree with Clay!
+  page: nv_session_1
+  created_at: 2008/07/03
+  
+steve:
+  nickname: sholder
+  text: blah blah
+  page: nv_session_1
+  created_at: 2008/07/01
 
-two:
-  nickname: MyString
-  text: MyText
+  
